--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -3,8 +3,6 @@ server {
     listen  [::]:80;
     server_name  localhost;
     root   /usr/share/nginx/html;
-    gzip on;
-    gzip_types text/plain text/css application/json application/javascript text/xml application/xml application/xml+rss text/javascript;
 
     location /api/ {
         proxy_pass http://backend:8081/;
@@ -12,9 +10,9 @@ server {
     }
 
     location / {
-        index  /store/index.html;
+        index  /momo-store/index.html;
     }
-    error_page   404 /store/index.html;
+    error_page   404 /momo-store/index.html;
     error_page   500 502 503 504  /50x.html;
     location = /50x.html {
         root   /usr/share/nginx/html;
